RESOLVED FIXED164903
TextDecoder constructor should not accept replacement encodings
https://bugs.webkit.org/show_bug.cgi?id=164903
Summary TextDecoder constructor should not accept replacement encodings
Alex Christensen
Reported 2016-11-17 19:31:11 PST
TextDecoder constructor should not accept replacement encodings
Attachments
Patch (3.47 KB, patch)
2016-11-17 19:34 PST, Alex Christensen
no flags
Patch (3.80 KB, patch)
2016-11-17 21:27 PST, Alex Christensen
cdumez: review+
Alex Christensen
Comment 1 2016-11-17 19:34:15 PST
WebKit Commit Bot
Comment 2 2016-11-17 19:37:07 PST
Attachment 295126 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3 2016-11-17 21:27:08 PST
Chris Dumez
Comment 4 2016-11-18 15:42:56 PST
Comment on attachment 295134 [details] Patch r=me
Alex Christensen
Comment 5 2016-11-18 16:59:13 PST
Note You need to log in before you can comment on or make changes to this bug.